--- a/composer.json
+++ b/composer.json
@@ -22,42 +22,13 @@
     }
   ],
   "require": {
-    "php": "^7.4 || ~8.0.0",
-    "ext-redis": "*",
-    "ext-ctype": "*",
-    "ext-fileinfo": "*",
-    "ext-gd": "*",
-    "ext-json": "*",
-    "ext-mbstring": "*",
-    "ext-pdo": "*",
-    "ext-spl": "*",
-    "lib-curl": "*",
-
-    "laminas/laminas-mvc": "^3.1.1",
-    "laminas/laminas-mvc-i18n": "^1.2.0",
-    "laminas/laminas-mvc-plugins": "^1.1.0",
-    "laminas/laminas-mvc-middleware": "^2.2",
-    "laminas/laminas-db": "^2.12.0",
-    "laminas/laminas-json": "^3.2",
-    "laminas/laminas-log": "^2.13.1",
-    "laminas/laminas-authentication": "^2.9",
-    "laminas/laminas-crypt": "^3.6",
-    "laminas/laminas-http": "^2.15",
-    "laminas/laminas-eventmanager": "^3.4",
-    "laminas/laminas-cache": "^3.1",
-    "laminas/laminas-cache-storage-adapter-redis": "^2.1",
-    "laminas/laminas-serializer": "^2.12",
-    "laminas/laminas-inputfilter": "^2.13",
-    "laminas/laminas-permissions-rbac": "^3.2",
-    "laminas/laminas-i18n": "^2.14"
+    "php": "~8.1.0 || ~8.2.0"
   },
-
   "autoload": {
     "psr-4": {
       "User\\": "vendor/pi/notification/src/"
     }
   },
-
   "suggest": {
     "ext-apc": "for opcode cache and system persistent data",
     "ext-discount": "for Markdown text parsing",
