--- a/data/notification.global.php.dist
+++ b/data/notification.global.php.dist
@@ -41,6 +41,23 @@ return [
             'xss'=>[
                 'status'=>true,
             ]
+        ],
+        'apns'=>[
+            'key_id' => '',
+            'is_production'=>false,
+            'team_id' => '',
+            'app_bundle_id' => '..',
+            'private_key_path' => '/app/config/autoload/...',
+            'private_key_secret' => null,
+            'setting'=>[
+                'limitation'=>[
+                    'status'=>true,
+                    'length'=>150
+                ],
+                'xss'=>[
+                    'status'=>true,
+                ]
+            ],
         ]
     ],
 ];
