--- a/composer.json
+++ b/composer.json
@@ -22,11 +22,76 @@
     }
   ],
   "require": {
-    "php": "~8.1.0 || ~8.2.0"
+    "php": "^8.3",
+    "ext-redis": "*",
+    "ext-ctype": "*",
+    "ext-fileinfo": "*",
+    "ext-gd": "*",
+    "ext-json": "*",
+    "ext-mbstring": "*",
+    "ext-pdo": "*",
+    "ext-spl": "*",
+    "ext-intl": "*",
+    "ext-soap": "*",
+    "ext-zip": "*",
+    "ext-curl": "*",
+    "ext-mongodb": "*",
+    "ext-zlib": "*",
+    "lib-curl": "*",
+    "laminas/laminas-component-installer":  "*",
+    "laminas/laminas-development-mode": "*",
+    "laminas/laminas-skeleton-installer":  "*",
+    "laminas/laminas-mvc":  "*",
+    "laminas/laminas-db":  "*",
+    "laminas/laminas-mvc-form":  "*",
+    "laminas/laminas-json":  "*",
+    "laminas/laminas-log":  "*",
+    "laminas/laminas-cli":  "*",
+    "laminas/laminas-mvc-i18n":  "*",
+    "laminas/laminas-mvc-plugins": "*",
+    "laminas/laminas-mvc-middleware": "*",
+    "laminas/laminas-authentication": "*",
+    "laminas/laminas-math": "*",
+    "laminas/laminas-http": "*",
+    "laminas/laminas-eventmanager": "*",
+    "laminas/laminas-cache": "*",
+    "laminas/laminas-cache-storage-adapter-redis": "*",
+    "laminas/laminas-serializer": "*",
+    "laminas/laminas-inputfilter": "*",
+    "laminas/laminas-permissions-rbac": "*",
+    "laminas/laminas-i18n": "*",
+    "laminas/laminas-file":"*",
+    "laminas/laminas-config": "*",
+    "laminas/laminas-diactoros": "*",
+    "laminas/laminas-soap": "*",
+    "laminas/laminas-code": "*",
+    "laminas/laminas-server": "*",
+    "laminas/laminas-diagnostics": "*",
+    "laminas/laminas-uri": "*",
+    "laminas/laminas-escaper": "*",
+    "lm-commons/lmc-cors": "*",
+    "firebase/php-jwt": "*",
+    "phpmailer/phpmailer": "*",
+    "imagine/imagine": "*",
+    "phpoffice/phppresentation": "*",
+    "phpoffice/phpspreadsheet": "*",
+    "phpoffice/phpword": "*",
+    "smalot/pdfparser": "*",
+    "robthree/twofactorauth": "*",
+    "endroid/qr-code": "*",
+    "hybridauth/hybridauth": "*",
+    "google/auth": "*",
+    "google/recaptcha": "*",
+    "phpseclib/phpseclib": "*",
+    "mongodb/mongodb": "*",
+    "triagens/arangodb": "*",
+    "doctrine/mongodb-odm-bundle": "*",
+    "doctrine/doctrine-mongo-odm-module": "*",
+    "aws/aws-sdk-php": "*"
   },
   "autoload": {
     "psr-4": {
-      "Notification\\": "vendor/pi/notification/src/"
+      "Pi\\Notification\\": "vendor/pi/notification/src/"
     }
   },
   "suggest": {
