--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,13 @@
       "email": "hossein@azizabadi.com"
     }
   ],
+  "extra": {
+    "laminas": {
+      "module": "Pi\\Notification"
+    }
+  },
   "require": {
-    "php": "^8.3",
+    "php": "~8.3.0 || ~8.4.0",
     "ext-redis": "*",
     "ext-ctype": "*",
     "ext-fileinfo": "*",
@@ -91,12 +96,18 @@
   },
   "autoload": {
     "psr-4": {
-      "Pi\\Notification\\": "vendor/pi/notification/src/"
+      "Pi\\Notification\\": "src/"
     }
   },
   "suggest": {
     "ext-apc": "for opcode cache and system persistent data",
     "ext-discount": "for Markdown text parsing",
     "ext-intl": "for i18n features"
+  },
+  "config": {
+    "allow-plugins": {
+      "laminas/laminas-component-installer": true,
+      "dealerdirect/phpcodesniffer-composer-installer": true
+    }
   }
 }
