Fix notification mail sender

--- a/data/notification.global.php.dist
+++ b/data/notification.global.php.dist
@@ -2,7 +2,7 @@
 
 return [
     'notification' => [
-        'email' => [
+        'mail' => [
             'laminas'   => [
                 'encoding' => 'utf-8',
                 'from'     => [
