Improve notification mail sender and add a symfony mail service

--- a/data/notification.global.php.dist
+++ b/data/notification.global.php.dist
@@ -2,7 +2,12 @@
 
 return [
     'notification' => [
-        'mail' => [
+        'defaults' => [
+            'mail' => 'phpMailer',
+            'sms'  => 'twilio',
+            'push' => 'fcm',
+        ],
+        'mail'     => [
             'laminas'   => [
                 'encoding' => 'utf-8',
                 'from'     => [
@@ -10,7 +15,19 @@ return [
                     'name'  => 'Laminas',
                 ],
             ],
-            'phpmailer' => [
+            'symfony'   => [
+                // Custom:     smtp://username:password@smtp.example.com:587
+                // Gmail:      smtp://your-email@gmail.com:your-app-password@smtp.gmail.com:587
+                // SendGrid:   smtp://apikey:your-sendgrid-api-key@smtp.sendgrid.net:587
+                // Amazon SES: smtp://your-aws-access-key-id:your-aws-secret-access-key@email-smtp.us-east-1.amazonaws.com:587
+                'dns'      => 'smtp://username:password@smtp.example.com:587',
+                'encoding' => 'utf-8',
+                'from'     => [
+                    'email' => 'XXX',
+                    'name'  => 'Laminas',
+                ],
+            ],
+            'phpMailer' => [
                 // use 587 if you have set `SMTPSecure => ENCRYPTION_STARTTLS`
                 // use 465 if you have set `SMTPSecure => ENCRYPTION_SMTPS`
                 'smtp'     => [
@@ -29,35 +46,36 @@ return [
                 'encoding' => 'utf-8',
             ],
         ],
-        'sms'   => [],
-        'push'  => [
-            'fcm' => [],
-            'apns'=>[
-                'key_id' => '',
-                'is_production'=>false,
-                'team_id' => '',
-                'app_bundle_id' => '..',
-                'private_key_path' => '/app/config/autoload/...',
-                'private_key_secret' => null,
-                'setting'=>[
-                    'limitation'=>[
-                        'status'=>true,
-                        'length'=>150
+        'sms'      => [],
+        'push'     => [
+            'fcm'  => [
+                'setting' => [
+                    'limitation' => [
+                        'status' => true,
+                        'length' => 150,
                     ],
-                    'xss'=>[
-                        'status'=>true,
-                    ]
+                    'xss'        => [
+                        'status' => true,
+                    ],
                 ],
-            ]
-        ],
-        'setting'=>[
-            'limitation'=>[
-                'status'=>true,
-                'length'=>150
             ],
-            'xss'=>[
-                'status'=>true,
-            ]
+            'apns' => [
+                'key_id'             => '',
+                'is_production'      => false,
+                'team_id'            => '',
+                'app_bundle_id'      => '..',
+                'private_key_path'   => '/app/config/autoload/...',
+                'private_key_secret' => null,
+                'setting'            => [
+                    'limitation' => [
+                        'status' => true,
+                        'length' => 150,
+                    ],
+                    'xss'        => [
+                        'status' => true,
+                    ],
+                ],
+            ],
         ],
     ],
 ];
